# hidayaai-backend

./: Dockerfile  fly.toml  main.py  requirements.txt  vercel.json
hadith-finder/hadith-lo-backend/: main.py  pyproject.toml  requirements.txt
