[project]
name = "hadith-lo-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crewai>=0.114.0",
    "crewai-tools>=0.40.1",
    "fastapi[standard]>=0.115.12",
    "google-generativeai",
    "langchain-google-genai>=2.0.10",
    "langdetect>=1.0.9",
    "litellm>=1.60.2",
    "mangum>=0.19.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "uvicorn>=0.34.0",
]
